--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 
 <!-- work project section starts -->
-<section class="work" id="work">
+<section class="project" id="project">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
