--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
+    <link id='favicon' rel="shortcut icon" href="./assets/images/saikat_profile.jpeg" type="image/x-png">
     <title>Portfolio | Saikat Sengupta</title>
 </head>
 <body oncontextmenu="return false">
@@ -35,7 +35,7 @@
             <li><a href="#experience">Experience</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <!-- <li><a href="#contact">Contact</a></li> -->
             </ul>
         </nav>
 </header>
@@ -314,7 +314,90 @@
 <!-- skills section starts -->
 <section class="skills" id="skills">
 
-    <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills </span></h2>
+    <h2 class="heading"><i class="fas fa-laptop-code"></i> Product Management Skill </span></h2>
+
+    <div class="container">
+          <div class="row" id="skillsContainer">
+
+           <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Agile Methodologies </span>
+              </div>
+            </div>
+            
+           <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Backlog Management</span>
+              </div>
+            </div>
+             <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>A/B Testing</span>
+              </div>
+            </div>
+             <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Go-to-Market Strategy</span>
+              </div>
+            </div>
+             <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Product Life Cycle</span>
+              </div>
+            </div>
+             <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Problem Solving</span>
+              </div>
+            </div>
+                <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Product Strategy</span>
+              </div>
+            </div>
+                <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Roadmap Planning</span>
+              </div>
+            </div>
+            <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Stakeholder Management</span>
+              </div>
+            </div>
+             <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Competitve Analysis</span>
+              </div>
+            </div>
+                <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Scale Agile Framework</span>
+              </div>
+            </div>
+                <div class="bar">
+              <div class="info">
+                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <span>Priotization</span>
+              </div>
+            </div>
+            
+
+      </div>
+</div>
+
+    <h2 class="heading"><i class="fas fa-laptop-code"></i> Technical Skill </span></h2>
 
     <div class="container">
           <div class="row" id="skillsContainer">
@@ -383,26 +466,14 @@
 
   <div class="timeline">
 
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Self Employed</h2>
-        </div>
-        <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
-        </div>
-      </div>
-    </div>
-
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>Harman Connected Services</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>Technical Product Owner</h3>
+            <p>Nov 2022 - Nov 2024</p>
         </div>
       </div>
     </div>
@@ -410,11 +481,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Harman Connected Services</h2>
         </div>
         <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <h3>Senior Software Engineer</h3>
+            <p>Aug 2021 - OCT 2022</p>
         </div>
       </div>
     </div>
@@ -422,11 +493,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Quickworkz Services PVT LTD</h2>
         </div>
         <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+            <h3>Android Developer</h3>
+            <p>Nov 2020 - July 2021</p>
         </div>
       </div>
     </div>
@@ -434,11 +505,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Frshr Technologies</h2>
+          <h2>Sasken Technologies</h2>
         </div>
         <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
+            <h3>Android Developer</h3>
+            <p>Aug 2018 - Nov 2020</p>
         </div>
       </div>
     </div>
@@ -446,21 +517,21 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>WonderingBlog</h2>
+          <h2>Trisys IT Services</h2>
         </div>
         <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
+            <h3>Software Engineer</h3>
+            <p>Aug 2016 - Aug 2018</p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="morebtn">
+  <!-- <div class="morebtn">
     <a href="/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
-  </div>
+  </div> -->
 
 </div>
 
@@ -472,29 +543,27 @@
 
   <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
 
-    <p class="qoute">Education is not the learning of facts, but the training of the mind to think.</p>
-
     <div class="box-container">
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+        <img draggable="false" src="./assets/images/educat/iimk.png" alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Information Technology</h3>
-        <p>Zeal College of engineering and research | SPPU</p>
-        <h4>2020-2024 | Pursuing</h4>
+        <h3>Executive Master of Business Administration</h3>
+        <p>Indian Institute of Management, Kozhikode</p>
+        <h4>2023-2025 | Pursuing</h4>
         </div>
     </div>
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
+      <img draggable="false" src="./assets/images/educat/svist.png" alt="">
       </div>
       <div class="content">
-      <h3>HSC Science | Informatic Practices</h3>
-      <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
-      <h4>2018-2020 | Completed</h4>
+      <h3>Btech in ECE</h3>
+      <p>SWami Vivekanande Institute of Technology, Kolkata</p>
+      <h4>2011-2014</h4>
       </div>
     </div>
 
@@ -546,7 +615,7 @@
 <!-- about section ends -->
 
 <!-- contact section starts -->
-<section class="contact" id="contact">
+<!-- <section class="contact" id="contact">
   
   <h2 class="heading"><i class="fas fa-headset"></i> Get in <span>Touch</span></h2>
 
@@ -582,7 +651,7 @@
     </form>
   </div>
   </div>
-</section>
+</section> -->
 <!-- contact section ends -->
 
 
@@ -592,8 +661,8 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
+          <h3>Saikat's Portfolio</h3>
+          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/></p>
       </div>
 
       <div class="box">
@@ -608,21 +677,21 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 XXX-XXX-XXXX</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <p> <i class="fas fa-phone"></i>+91 8867543504</p>
+          <p> <i class="fas fa-envelope"></i>saikatssg16@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Bangalore, India - 560016</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/jigar-sable" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/saikat-sengupta-aspiring-pm/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <!-- <a href="https://github.com/jigar-sable" class="fab fa-github" aria-label="GitHub" target="_blank"></a> -->
+              <a href="mailto:saikatssg16@gmail.com@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
+              <!-- <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
+              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a> -->
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
+  <!-- <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1> -->
 
 </section>
 <!-- footer section ends -->
