Added icon in Product management skill part

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 <!-- skills section starts -->
 <section class="skills" id="skills">
 
-    <h2 class="heading"><i class="fas fa-laptop-code"></i> Product Management Skill </span></h2>
+    <h2 class="heading"><i class="fas fa-laptop-code"></i> Product <span>Management Skill </span></h2>
 
     <div class="container">
           <div class="row" id="skillsContainer">
@@ -340,55 +340,55 @@
             </div>
              <div class="bar">
               <div class="info">
-                <img src="./assets/images/skills/agile.png"/>
+                <img src="./assets/images/skills/go_to.png"/>
                 <span>Go-to-Market Strategy</span>
               </div>
             </div>
              <div class="bar">
               <div class="info">
-                <img src="./assets/images/skills/agile.png"/>
+                <img src="./assets/images/skills/plc.png"/>
                 <span>Product Life Cycle</span>
               </div>
             </div>
              <div class="bar">
               <div class="info">
-                <img src="./assets/images/skills/agile.png"/>
+                <img src="./assets/images/skills/problem_solving.png"/>
                 <span>Problem Solving</span>
               </div>
             </div>
                 <div class="bar">
               <div class="info">
-                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <img src="./assets/images/skills/product_str.png"/>
                 <span>Product Strategy</span>
               </div>
             </div>
                 <div class="bar">
               <div class="info">
-                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <img src="./assets/images/skills/road_planning.png"/>
                 <span>Roadmap Planning</span>
               </div>
             </div>
             <div class="bar">
               <div class="info">
-                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <img src="./assets/images/skills/stakeholder_management.png"/>
                 <span>Stakeholder Management</span>
               </div>
             </div>
              <div class="bar">
               <div class="info">
-                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <img src="./assets/images/skills/competitor_ana.png"/>
                 <span>Competitve Analysis</span>
               </div>
             </div>
                 <div class="bar">
               <div class="info">
-                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <img src="./assets/images/skills/safe_agaile.png"/>
                 <span>Scale Agile Framework</span>
               </div>
             </div>
                 <div class="bar">
               <div class="info">
-                <img src="https://img.icons8.com/color/48/000000/adobe-xd.png"/>
+                <img src="./assets/images/skills/prioritization.png"/>
                 <span>Priotization</span>
               </div>
             </div>
@@ -396,8 +396,9 @@
 
       </div>
 </div>
+<p></p>
 
-    <h2 class="heading"><i class="fas fa-laptop-code"></i> Technical Skill </span></h2>
+    <h2 class="heading"><i class="fas fa-laptop-code"></i>Technical <span>Skill</span></h2>
 
     <div class="container">
           <div class="row" id="skillsContainer">
@@ -486,7 +487,7 @@
 <!-- experience section starts -->
 <section class="experience" id="experience">
 
-  <h2 class="heading"><i class="fas fa-briefcase"></i> Professional Experience </h2>
+  <h2 class="heading"><i class="fas fa-briefcase"></i> Professional <span>Experience </span></h2>
 
   <div class="timeline">
 
